--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#9d4edd">
+    <meta name="theme-color" content="#525fff">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="icon" href="images/fav1.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
