--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300&family=Roboto+Condensed:wght@700&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Armin Sayar</title>
 </head>
 
 <body>
